--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
 
     </header>
     <main>
+        <section class="team-container">
+            <div class="team-photo-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+
+            </div>
+            <div class="team-text-container">
+                <h3 class="team-text-title"><span class="span-quick">Quick list </span> of Our <span class="span-feature">Features</span></h3>
+                <p class="team-text-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+
+            </div>
+        </section>
 
     </main>
     <footer>
