--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="bannar-container">
             <div class="bannar-content">
                 <h1 class="bannar-title">Brand New Group of Architects </h1>
-                <p class="bannar-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
             <img src="images/banner.png" alt="">
@@ -38,7 +38,7 @@
             </div>
             <div class="team-text-container">
                 <h3 class="team-text-title"><span class="span-quick">Quick list </span> of Our <span class="span-feature">Features</span></h3>
-                <p class="team-text-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
 
             </div>
